Fix overflow

--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -64,7 +64,6 @@ body {
   justify-content: center;
   min-height: 100vh;
   background-color: var(--dark-color);
-  overflow: hidden;
   perspective: 1000px;
 }
 .night {
